Fixed header bug on Safari

--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,7 @@ header h1 {
     font-size: 5em;
     font-family: 'MomcakeBold';
     font-weight: 100;
+    line-height: 100%;
 }
 
 .mobile-header-img {
